--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,28 @@
-.wrapper {
-    border : orange solid 40px;
+body {
+    margin: 0;
+    padding: 0;
+    border: 0;
 }
 * {
     font-family: 'Ubuntu', sans-serif;
     color : grey;
+}
+
+
+
+.header {
+    border: 2px solid black;
+    background-color: lightcoral;
+}
+
+.section-title {
+    border: 2px solid black;
+    background-color: lightblue;
+}
+
+.section-article {
+    border: 2px solid black;
+    background-color: lightgreen;
 }
 
 #logo {
