--- a/styles.css
+++ b/styles.css
@@ -1,63 +1,72 @@
 body {
-    margin: 0;
-    padding: 0;
-    border: 0;
+  margin: 0;
+  padding: 0;
+  border: 0;
 }
+.wrapper {
+  padding: 20px;
+}
+
 * {
-    font-family: 'Ubuntu', sans-serif;
-    color : grey;
+  font-family: "Ubuntu", sans-serif;
+  color: grey;
 }
-
-
 
 .header {
-    border: 2px solid black;
-    background-color: lightcoral;
+  border: 2px solid black;
+  background-color: lightcoral;
+  height: 15vh;
 }
 
+.menu {
+  display: flex;
+  flex-flow: row-wrap;
+  /* align-items: center; */
+  /* justify-content: space-between; */
+}
+#logo {
+  max-width: 25%;
+}
+#nav {
+  max-width: 50%;
+}
+#nav-contact {
+  max-width: 25%;
+}
+
+/* .flex-row {
+  display: flex;
+  flex-flow: row-wrap;
+  justify-content: space-between;
+} */
+
 .section-title {
-    border: 2px solid black;
-    background-color: lightblue;
+  border: 2px solid black;
+  background-color: lightblue;
 }
 
 .section-article {
-    border: 2px solid black;
-    background-color: lightgreen;
-}
-
-#logo {
-    padding: 10px 10px 10px;
-}
-#nav-contact {
-    padding: 10px 10px 10px;
-}
-#menu {
-    display : flex;
-    flex-flow: row-wrap;
-    justify-content: space-between;
-}
-
-#nav { 
-    display : flex;
+  border: 2px solid black;
+  background-color: lightgreen;
 }
 
 .container-form {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 input {
-    width: 30vw;
-    margin: 1rem;
-    padding: 1rem;
+  width: 30vw;
+  margin: 1rem;
+  padding: 1rem;
 }
 input[placeholder] {
-    font-size: 1.2rem;
+  font-size: 1.2rem;
 }
 label {
-    font-size: 1.5rem;
+  font-size: 1.5rem;
 }
 .submit {
-    max-width: 10vw;
-    text-align: center;
+  max-width: 10vw;
+  text-align: center;
 }
