--- a/index-styles.css
+++ b/index-styles.css
@@ -47,38 +47,28 @@ body {
   justify-content: space-evenly;
   align-items: center;
 }
-a {
-  text-decoration: none;
-}
-a:hover {
-  font-size: 1.3rem;
-}
-.container-a {
+button {
   width: 145px;
   font-size: 1.1rem;
   background-color: lightgray;
   border: none;
   border-radius: 4px;
   padding: 10px;
-  text-align: center;
 }
-
+button:hover {
+  font-size: 1.3rem;
+}
 .nav-contact {
   flex: 2;
-  width: 145px;
+  width: auto;
   font-size: 1.1rem;
   border: none;
   border-radius: 4px;
   padding: 5px;
   text-align: right;
 }
-.nav-contact a {
-  font-size: 1.1rem;
-  background-color: lightgray;
-  border-radius: 4px;
-  padding: 10px;
-  text-align: center;
-  flex: 1;
+.nav-contact button {
+  flex: 1 auto;
   border: 5px solid rgb(241, 241, 121);
 }
 
