--- a/detail-styles.css
+++ b/detail-styles.css
@@ -1,85 +1,3 @@
-body {
-  margin: 0;
-  padding: 0;
-  border: 0;
-}
-* {
-  font-family: "Ubuntu", sans-serif;
-  color: grey;
-}
-
-.wrapper {
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-.container-large {
-  width: 70rem;
-  margin: 0 auto;
-}
-.container-medium {
-  width: 50rem;
-  margin: 0 auto;
-}
-
-/*HEADER*/
-
-.menu {
-  display: flex;
-  flex-flow: row-wrap;
-  justify-content: space-between;
-  align-items: center;
-  column-gap: 15px;
-  border-top: 5vh solid lightgray;
-}
-.logo {
-  flex: 2;
-}
-.logo img {
-  width: 50%;
-  padding: 10px 0;
-}
-.nav {
-  flex: 3;
-  display: flex;
-  flex-flow: row-wrap;
-  justify-content: space-evenly;
-  align-items: center;
-}
-button {
-  width: 145px;
-  font-size: 1.1rem;
-  background-color: lightgray;
-  border: none;
-  border-radius: 4px;
-  padding: 10px;
-}
-button:hover {
-  font-size: 1.3rem;
-}
-.nav-contact {
-  flex: 2;
-  width: auto;
-  font-size: 1.1rem;
-  border: none;
-  border-radius: 4px;
-  padding: 5px;
-  text-align: right;
-}
-.nav-contact button {
-  flex: 1 auto;
-  border: 5px solid rgb(241, 241, 121);
-}
-
-/*TITLE*/
-
-.section-title {
-  text-align: center;
-  font-size: 1.5rem;
-  padding: 15px;
-}
-
 /*GRID-CONTAINER*/
 .grid-container {
   display: grid;
@@ -90,6 +8,7 @@ button:hover {
   border: 1px solid black;
   text-align: center;
   margin: 1rem;
+  padding-bottom: 1rem;
 }
 .grid-img {
   width: 100%;
@@ -113,12 +32,4 @@ button:hover {
 .grid-description a:hover {
   pointer-events: auto;
   color: black;
-}
-
-/*FOOTER*/
-
-footer {
-  background-color: lightgray;
-  padding: 25px;
-  text-align: center;
 }
