--- a/index-styles.css
+++ b/index-styles.css
@@ -10,7 +10,8 @@
   padding: 15px;
 }
 .main-img {
-  width: 30%;
+  width: 35%;
+  height: auto;
   padding: 0rem 2rem;
   border-radius: 40%;
   box-shadow: 10px 10px 5px rgb(241, 241, 121);
@@ -20,6 +21,11 @@
   line-height: 1.3rem;
   font-size: 1.2rem;
   padding-right: 2rem;
+}
+#about-me p {
+  line-height: 1.5rem;
+  font-size: 1.3rem;
+  word-spacing: 0.5rem;
 }
 
 .cv-portfolio {
