--- a/index-styles.css
+++ b/index-styles.css
@@ -5,7 +5,7 @@
   flex-wrap: nowrap;
   justify-content: space-between;
   align-content: stretch;
-  align-items: stretch;
+  align-items: center;
   column-gap: 9%;
   padding: 15px;
 }
